--- a/ExperimentsData/appsettings.json
+++ b/ExperimentsData/appsettings.json
@@ -5,8 +5,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Trace",
+      "Microsoft.Hosting.Lifetime": "Trace",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
   "AllowedHosts": "*"
