URLS for deploy

--- a/ExperimentsData/appsettings.json
+++ b/ExperimentsData/appsettings.json
@@ -10,5 +10,6 @@
       "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://localhost:80;http://localhost:443"
 }
