correct name for db.

--- a/ExperimentsData/appsettings.json
+++ b/ExperimentsData/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "defaultConnectionString": "Data Source=LoraScada.db"
+    "defaultConnectionString": "Data Source=Storage.db"
   },
   "Logging": {
     "LogLevel": {
