correct url to deploy

--- a/ExperimentsData/appsettings.json
+++ b/ExperimentsData/appsettings.json
@@ -11,5 +11,5 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:80;http://localhost:443"
+  "Urls": "http://0.0.0.0:80;http://0.0.0.0:443"
 }
