--- a/ExperimentsData/appsettings.json
+++ b/ExperimentsData/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "defaultConnectionString": "Data Source=datasets.cs7jnyikn7m0.us-east-1.rds.amazonaws.com;Initial Catalog=DATASET;User ID=sa;Password=wdaqwe123*"
+//    "defaultConnectionString": "Data Source=datasets.cs7jnyikn7m0.us-east-1.rds.amazonaws.com;Initial Catalog=DATASET;User ID=sa;Password=wdaqwe123*",
+    "defaultConnectionString": "Data Source=Storage.db"
   },
   "Logging": {
     "LogLevel": {
