--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 server.port=8080
-spring.application.name=zuul
+spring.application.name=api-gateway
 eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
@@ -17,14 +17,7 @@ zuul.sensitiveHeaders=Cookie,Set-Cookie,Access-Control-Allow-Origin
 zuul.host.connect-timeout-millis=10000
 ribbon.ReadTimeout=60000
 
-## REDIS CONNECTION
-spring.redis.host=${REDIS_HOST:localhost}
-spring.redis.port=${REDIS_PORT:6379}
 
 logging.level.*=DEBUG
 
 management.endpoints.web.exposure.include=routes,filters,health
-
-spring.datasource.url: ${DATASOURCE_JDBC:jdbc:postgresql://localhost:5432/eletra_integration_db}
-spring.datasource.username: ${DATASOURCE_USERNAME:postgres}
-spring.datasource.password: ${DATASOURCE_PASSWORD:postgres}
