--- a/attributes.module/pom.xml
+++ b/attributes.module/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.lukkascost</groupId>
 	<artifactId>attributes.module</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>attributes.module</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -18,6 +18,12 @@
 		<spring-cloud.version>2020.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>br.com.lukkascost</groupId>
+			<artifactId>commons.module</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
