Attribute module and commons project with entities.

--- a/attributes.module/src/main/resources/application.properties
+++ b/attributes.module/src/main/resources/application.properties
@@ -1,2 +1,21 @@
 spring.application.name=attributes
 
+server.port=${SERVER_PORT:0}
+spring.profiles.active=@spring.profiles.active@
+
+eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-expiration-duration-in-seconds=15
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.activemq.broker-url=tcp://${BROKER_URL:localhost}:${BROKER_PORT:61616}
+spring.activemq.user=${BROKER_USER:admin}
+spring.activemq.password=${BROKER_PASSWORD:admin}
+
+spring.datasource.url: ${DATASOURCE_JDBC:jdbc:postgresql://localhost:5432/data_analyze_db}
+spring.datasource.username: ${DATASOURCE_USERNAME:postgres}
+spring.datasource.password: ${DATASOURCE_PASSWORD:postgres}
+
+spring.flyway.out-of-order=true
+
+#spring.jpa.hibernate.ddl-auto=create-drop
