--- a/dataset.module/pom.xml
+++ b/dataset.module/pom.xml
@@ -9,10 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.lukkascost</groupId>
-	<artifactId>attributes.module</artifactId>
+	<artifactId>dataset.module</artifactId>
 	<version>0.0.1</version>
-	<name>attributes.module</name>
+	<name>dataset.module</name>
 	<description>Demo project for Spring Boot</description>
+
+
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2020.0.2</spring-cloud.version>
@@ -135,6 +137,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
