attribute and dataset module.

--- a/dataset.module/src/main/resources/application.properties
+++ b/dataset.module/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.datasource.username: ${DATASOURCE_USERNAME:postgres}
 spring.datasource.password: ${DATASOURCE_PASSWORD:postgres}
 
 spring.flyway.out-of-order=true
-
+spring.flyway.table=datasets_flyway_schema_history
 #spring.jpa.hibernate.ddl-auto=create-drop
