--- a/sample.module/src/main/resources/application.properties
+++ b/sample.module/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.datasource.password: ${DATASOURCE_PASSWORD:postgres}
 spring.flyway.out-of-order=true
 spring.flyway.table=samples_flyway_schema_history
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
