--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
           memory: 1024M
         reservations:
           memory: 700M
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "10m"
   api-gateway:
     image: lukkascost/api-gateway
     restart: always
@@ -28,6 +33,11 @@ services:
       BROKER_USER: admin
       BROKER_PASSWORD: admin
       EUREKA_URI: http://cloud-discovery:8761/eureka
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "10m"
     depends_on:
       - activemq
       - cloud-discovery
@@ -40,9 +50,15 @@ services:
       - "8161:8161"
   postgres:
     image: postgres
-    command: postgres -c 'max_connections=10000'
+    command: postgres -c 'max_connections=1000'
+    restart: always
     ports:
       - "5432:5432"
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "10m"
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: data_analyze_db
