--- a/sample.module/pom.xml
+++ b/sample.module/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.lukkascost</groupId>
 	<artifactId>sample.module</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>sample.module</name>
 	<description>Demo project for Spring Boot</description>
 
