--- a/experiments.module/pom.xml
+++ b/experiments.module/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.lukkascost</groupId>
 	<artifactId>experiments.module</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>experiments.module</name>
 	<description>Demo project for Spring Boot</description>
 
