--- a/attributes.module/src/main/resources/application.properties
+++ b/attributes.module/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.password: ${DATASOURCE_PASSWORD:postgres}
 spring.flyway.out-of-order=true
 
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
