--- a/executions.module/src/main/resources/application.properties
+++ b/executions.module/src/main/resources/application.properties
@@ -26,3 +26,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
+## REDIS CONNECTION
+spring.redis.host=${REDIS_HOST:redis}
+spring.redis.port=${REDIS_PORT:6379}
