--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -213,6 +213,8 @@ services:
     image: postgres
     command: postgres -c 'max_connections=1000'
     restart: always
+    volumes:
+      - D:/OneDrive/Repository/bds/pg:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     logging:
@@ -226,9 +228,15 @@ services:
 
   redis:
     image: redis
+    restart: always
     command: redis-server /usr/local/etc/redis/redis.conf
     ports:
       - "8152:6379"
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
-      - ./redis-data:/data
+      - D:/OneDrive/Repository/bds/redis_data:/data
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "10m"
