--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,6 +15,12 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
-      - name: build the image
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build the commons image
         run: |
-          docker buildx build --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/data-analyze-commons:latest commons.module/
+          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/data-analyze-commons:latest commons.module/
+      - name: build the dataset image
+        run: |
+          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/data-analyze-dataset-module:latest dataset.module/
+      
