--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -22,5 +22,5 @@ jobs:
           docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/data-analyze-commons:latest commons.module/
       - name: build the api-gateway image
         run: |
-          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/api-gateway:latest api-gateways/
+          docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag lukkascost/api-gateway:latest api-gateway/
       
