rounds redis data.

--- a/rounds.module/src/main/resources/application.properties
+++ b/rounds.module/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.flyway.table=rounds_flyway_schema_history
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.redis.host=${REDIS_HOST:redis}
+spring.redis.port=${REDIS_PORT:6379}
+
