--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -210,7 +210,7 @@ services:
       - "61616:61616"
       - "8161:8161"
   postgres:
-    image: postgres
+    image: postgres:13.4
     command: postgres -c 'max_connections=1000'
     restart: always
     volumes:
